# unirail_simulation

./: CMakeLists.txt  README.md
.cache/clangd/index/: logic.c.8E8CB7ED2AD56CAB.idx  logic.h.8D8276F1F1EEDAB8.idx  main.c.6E30AB556B2394FC.idx  simulate.c.965BDB64F1B76659.idx
data/: track_1.csv  track_1.json  track_2.csv  track_3.csv
include/unirail_simulation/: file.h  logic.h  plot.h  utils.h
src/: file.c  logic.c  plot.c  simulate.c  utils.c
